--- a/html/css/style.css
+++ b/html/css/style.css
@@ -149,8 +149,6 @@
     height: 100%;
     position: absolute;
     width: 100%;
-    left: 50%;
-    transform: translateX(-50%);
     display: flex; }
   .region_info_close,
   .region_info_wrapper_close {
@@ -268,7 +266,9 @@
       .region_info_wrapper_left .data-wrapper div {
         padding: 10px 0;
         border-bottom: 1px solid rgba(58, 112, 122, 0.5);
-        -webkit-column-break-inside: avoid; }
+        -webkit-column-break-inside: avoid;
+        page-break-inside: avoid;
+        break-inside: avoid-column; }
         .global_presence .region_info_left .data-wrapper div span + span,
         .sustainability .region_info_left .data-wrapper div span + span, .global_presence
         .region_info_wrapper_left .data-wrapper div span + span,
