--- a/html/css/style.css
+++ b/html/css/style.css
@@ -327,8 +327,8 @@
             padding-top: 0; } }
       .lives_improved .region_info_left .lives_improved_percentage, .lives_improved
       .region_info_wrapper_left .lives_improved_percentage {
-        font-size: 50px;
-        line-height: 50px;
+        font-size: 73px;
+        line-height: 86px;
         color: #fff;
         font-weight: 800; }
         @media only screen and (min-width: 769px) {
@@ -363,8 +363,9 @@
             display: none; } }
         .lives_improved .region_info_left .lives_improved_icons img, .lives_improved
         .region_info_wrapper_left .lives_improved_icons img {
-          height: 15px;
-          margin-left: 2px; }
+          height: auto;
+          margin-left: 2px;
+          width: calc((100% / 25) - 2px); }
           @media only screen and (min-width: 769px) {
             .lives_improved .region_info_left .lives_improved_icons img, .lives_improved
             .region_info_wrapper_left .lives_improved_icons img {
