--- a/html/scss/panels/map_tools.scss
+++ b/html/scss/panels/map_tools.scss
@@ -47,10 +47,11 @@
 			}
 			li {
 				color: #fff;
-				font-size: 14px;
+				font-size: 16px;
+				line-height:13px;
 				margin: 0;
 				height: 40px;
-
+				font-weight: 700;
 				&:last-child {
 					display: table-cell;
 					vertical-align: bottom;
