--- a/html/css/style.css
+++ b/html/css/style.css
@@ -211,7 +211,11 @@
     width: 100%;
     font-weight: 600;
     font-size: 17px;
-    display: inline; }
+    display: block; }
+    @media only screen and (min-width: 769px) {
+      .region_info .nr_label,
+      .region_info_wrapper .nr_label {
+        display: inline; } }
     @media only screen and (min-width: 1400px) {
       .region_info .nr_label,
       .region_info_wrapper .nr_label {
@@ -223,14 +227,19 @@
       padding-top: inherit; }
     .region_info .nr_label span.label,
     .region_info_wrapper .nr_label span.label {
-      margin-right: 50px; }
+      margin-right: 30px; }
       .region_info .nr_label span.label + .footnote,
       .region_info_wrapper .nr_label span.label + .footnote {
         margin-left: -50px; }
     .region_info .nr_label span.nr,
     .region_info_wrapper .nr_label span.nr {
       margin-left: 5px;
-      font-weight: 800; }
+      font-weight: 800;
+      float: right; }
+      @media only screen and (min-width: 769px) {
+        .region_info .nr_label span.nr,
+        .region_info_wrapper .nr_label span.nr {
+          float: none; } }
     @media only screen and (min-width: 769px) {
       .region_info .nr_label:last-of-type,
       .region_info_wrapper .nr_label:last-of-type {
@@ -303,10 +312,17 @@
       .region_info_wrapper_left .data-wrapper {
         border-bottom: 1px solid rgba(58, 112, 122, 0.5);
         padding: 5px 0 10px 0; }
-        .lives_improved .region_info_left .data-wrapper > div:first-child:after, .lives_improved
-        .region_info_wrapper_left .data-wrapper > div:first-child:after {
-          content: '|';
-          padding: 0 3px 0 8px; }
+        .lives_improved .region_info_left .data-wrapper > div:last-child, .lives_improved
+        .region_info_wrapper_left .data-wrapper > div:last-child {
+          display: block; }
+          @media only screen and (min-width: 769px) {
+            .lives_improved .region_info_left .data-wrapper > div:last-child, .lives_improved
+            .region_info_wrapper_left .data-wrapper > div:last-child {
+              display: inline; }
+              .lives_improved .region_info_left .data-wrapper > div:last-child:before, .lives_improved
+              .region_info_wrapper_left .data-wrapper > div:last-child:before {
+                content: '|';
+                padding: 0 8px 0 3px; } }
         .lives_improved .region_info_left .data-wrapper div, .lives_improved
         .region_info_wrapper_left .data-wrapper div {
           font-size: 17px; }
@@ -315,21 +331,38 @@
         border-bottom: 1px solid rgba(58, 112, 122, 0.5);
         font-size: 34px;
         color: #fff;
-        padding: 10px 0; }
+        padding: 10px 0;
+        display: flex;
+        justify-content: space-between; }
+        @media only screen and (min-width: 769px) {
+          .lives_improved .region_info_left_header, .lives_improved
+          .region_info_wrapper_left_header {
+            display: block; } }
         .lives_improved .region_info_left_header .nr_lives_improved, .lives_improved
         .region_info_wrapper_left_header .nr_lives_improved {
-          font-weight: 700; }
+          font-weight: 800;
+          order: 1; }
+          @media only screen and (min-width: 769px) {
+            .lives_improved .region_info_left_header .nr_lives_improved, .lives_improved
+            .region_info_wrapper_left_header .nr_lives_improved {
+              order: 0; } }
         .lives_improved .region_info_left_header .nr_lives_improved_label, .lives_improved
         .region_info_wrapper_left_header .nr_lives_improved_label {
-          font-weight: 500;
-          margin-left: 10px;
-          text-transform: lowercase; }
+          font-weight: 500; }
+          @media only screen and (min-width: 769px) {
+            .lives_improved .region_info_left_header .nr_lives_improved_label, .lives_improved
+            .region_info_wrapper_left_header .nr_lives_improved_label {
+              margin-left: 5px;
+              text-transform: lowercase; } }
       .lives_improved .region_info_left .lives_improved_wrapper, .lives_improved
       .region_info_wrapper_left .lives_improved_wrapper {
-        padding-top: 15px; }
+        padding-top: 15px;
+        display: flex;
+        flex-direction: column; }
         @media only screen and (min-width: 769px) {
           .lives_improved .region_info_left .lives_improved_wrapper, .lives_improved
           .region_info_wrapper_left .lives_improved_wrapper {
+            flex-direction: row;
             padding-top: 0; } }
       .lives_improved .region_info_left .lives_improved_percentage, .lives_improved
       .region_info_wrapper_left .lives_improved_percentage {
@@ -347,7 +380,20 @@
         color: #fff;
         font-size: 21px;
         font-weight: 800;
-        margin-top: -5px; }
+        margin-top: -5px;
+        align-self: center;
+        margin-left: 15px; }
+        .lives_improved .region_info_left .lives_improved_percentage_sub span, .lives_improved
+        .region_info_wrapper_left .lives_improved_percentage_sub span {
+          font-size: 21px !important; }
+        @media only screen and (min-width: 769px) {
+          .lives_improved .region_info_left .lives_improved_percentage_sub, .lives_improved
+          .region_info_wrapper_left .lives_improved_percentage_sub {
+            align-self: unset;
+            margin-left: 0; }
+            .lives_improved .region_info_left .lives_improved_percentage_sub span, .lives_improved
+            .region_info_wrapper_left .lives_improved_percentage_sub span {
+              font-size: unset; } }
       .lives_improved .region_info_left .lives_improved_wrapper, .lives_improved
       .region_info_wrapper_left .lives_improved_wrapper {
         display: flex;
@@ -355,18 +401,24 @@
         padding: 10px 0; }
       .lives_improved .region_info_left .lives_improved_numbers, .lives_improved
       .region_info_wrapper_left .lives_improved_numbers {
-        width: calc( ( ( ( 100% + 50px ) / 12 ) * 6 ) - 50px);
+        width: 100%;
         display: flex;
-        flex-direction: column; }
+        flex-direction: row;
+        align-content: space-between; }
+        @media only screen and (min-width: 769px) {
+          .lives_improved .region_info_left .lives_improved_numbers, .lives_improved
+          .region_info_wrapper_left .lives_improved_numbers {
+            width: calc( ( ( ( 100% + 50px ) / 12 ) * 6 ) - 50px);
+            flex-direction: column;
+            align-content: unset; } }
       .lives_improved .region_info_left .lives_improved_icons, .lives_improved
       .region_info_wrapper_left .lives_improved_icons {
         padding: 10px 0 0 0;
-        width: 232px;
         flex-wrap: wrap; }
-        @media only screen and (max-width: 440px) {
+        @media only screen and (min-width: 769px) {
           .lives_improved .region_info_left .lives_improved_icons, .lives_improved
           .region_info_wrapper_left .lives_improved_icons {
-            display: none; } }
+            width: 232px; } }
         .lives_improved .region_info_left .lives_improved_icons img, .lives_improved
         .region_info_wrapper_left .lives_improved_icons img {
           height: auto;
@@ -432,7 +484,8 @@
           height: 100%; } }
   .region_info_title,
   .region_info_wrapper_title {
-    color: #E2EA6D; }
+    color: #E2EA6D;
+    font-weight: 800; }
   .region_info .region_info_content,
   .region_info_wrapper .region_info_content {
     margin: 0 2em; }
