--- a/html/css/graph.css
+++ b/html/css/graph.css
@@ -1,7 +1,7 @@
 #graph {
 	width: 100%;
 	height: 100%;
-	max-height: 120px;
+	display: none;
 	display: -ms-grid;
 	display: grid;
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
